# neural_network

./: .gitignore  CMakeLists.txt  OrbitControls.js  arena.html  arena.js  arena_test.html  build.py  c_net_poly.nad  cannon-es.js  cleanup.cmake  config.cmake  coords.py  ctypes_wrapper.py  dataset.h  graph.html  kapellmeister_micro.c  main.c  main.py  micro_net.c  micro_net.h  micro_net_test.c  nadl_example.nad  nadl_parser.py  nanite.c  nanite.h  network.c  network.h  network.py  network_new.c  network_new.h  network_test.c  neuron.c  neuron.h  neuron_complex_values.c  neuron_complex_values.h  neuron_header.h  neuron_kapellmeister.c  neuron_kapellmeister.h  neuron_linear.c  neuron_simple.c  (+28 more)
Visual_representation/: graph.html  main.py  nodes.py
lib/: CMakeLists.txt  mymath.c  utils.c  utils.h  work_with_folders.c
micro_maps/: config_feedback_micronet.h  config_feedback_module.h  config_linear_micronet.h  config_poly_micronet.h  config_td_network.h  micronets.nad  parsing_results.json
source/: CMakeLists.txt
source/micronet/: CMakeLists.txt  micronet.c  micronet.h  micronet_common.c  micronet_common.h  micronet_mutations.c  micronet_mutations.h  micronet_save_restore.c  micronet_save_restore.h  micronet_train.h  neuron_iface.c  neuron_iface.h
source/network/: CMakeLists.txt  network.c  network.h  network_common.c  network_common.h  network_mutations.c  network_mutations.h  network_save_restore.c  network_save_restore.h  network_train.c
source/neuron/: CMakeLists.txt  neuron.c  neuron.h  neuron_linear.c  neuron_mutations.c  neuron_pattern.c  neuron_poly.c  neuron_save_restore.c  neuron_types.h
source/neuron-micronet_interface/: CMakeLists.txt  neuron_iface.c  neuron_micronet_iface.c  neuron_micronet_iface.h
source/neuron/linear/: CMakeLists.txt  linear_neuron.c  linear_neuron.h  linear_neuron_mutations.c  linear_neuron_save_restore.c
source/neuron/poly/: CMakeLists.txt  poly_neuron.c  poly_neuron.h  poly_neuron_mutations.c  poly_neuron_save_restore.c
source/neurons/: neuron_types.h
source/neurons/linear/: CMakeLists.txt  neuron.c  neuron.h
source/neurons/simple/: CMakeLists.txt  neuron.c  neuron.h
source/neurons/smart/: CMakeLists.txt  neuron.c  neuron.h
tests/: CMakeLists.txt  datasets.c  datasets.h  micronet_test.c  network_test.c  neuron_linear_test.c  neuron_simple_test.c  neuron_test.c  save_restore_test.c
tests/lib/: CMakeLists.txt  test_work_with_folders.c
tests/micronet/: CMakeLists.txt  micronet_test.c  micronet_test_save_restore.c
tests/network/: CMakeLists.txt  network_instantiate_test.c  network_test.c  network_test_micronet.c  network_test_micronet.h  network_test_save_restore.c
tests/neuron/: CMakeLists.txt  common_functions.c  common_functions.h  neuron_linear_test.c  neuron_poly_test.c  neuron_poly_test_adaptation.c  neuron_simple_test.c  neuron_smart_test.c  neuron_test_mutation.c  neuron_test_output.c  neuron_test_rollback.c  neuron_test_save_restore.c
train_micronets/: CMakeLists.txt  poly_dataset.h  train_poly_micronet.c  train_poly_micronet.cmake
